plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.1'
	id 'io.spring.dependency-management' version '1.1.0'
}
apply from: 'version.gradle'

group = 'com.github.jmgoyesc'
version = loadVersion().getVersion()
sourceCompatibility = JavaVersion.VERSION_19

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('testcontainersVersion', "1.17.6")
}

dependencies {
	// lombok annotations
	annotationProcessor 'org.projectlombok:lombok'
	implementation "org.projectlombok:lombok"

	implementation 'org.springframework.boot:spring-boot-starter-web'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// mongodb
	implementation 'org.mongodb:mongodb-driver-sync:4.8.1'
	implementation 'org.xerial.snappy:snappy-java:1.1.9.1'

	// questdb postgres jdbc
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.questdb:questdb:6.6.1'
	implementation 'com.zaxxer:HikariCP:5.0.1'

	// rest optimizations
	implementation 'org.apache.httpcomponents.client5:httpclient5'

	// apache commons
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	// test
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation "org.testcontainers:questdb"
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
	testRuntimeOnly 'org.postgresql:postgresql'
}

springBoot {
	buildInfo()
}

bootJar {
	archiveFileName = "agent.jar"
}

tasks.named("jar") {
	enabled = false
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += '--enable-preview'
}

build.dependsOn patchVersionUpdate